fix margin issue for facility listing page on mobile

--- a/app/assets/stylesheets/list.css
+++ b/app/assets/stylesheets/list.css
@@ -12,7 +12,7 @@
 
 .facility-bottom-items {
   position: absolute;
-  margin-top:20px;
+  margin-top: 5px;
 }
 
 .list {
